--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,9 +1,11 @@
 <resources>
     <color name="screenBackground">#4A148C</color> <!-- dark purple -->
-    <color name="primaryText">#FFF176</color>      <!-- yellow -->
+    <color name="primaryText">#FFC107</color>      <!-- yellow -->
     <color name="secondaryText">#FFD54F</color>    <!-- lighter yellow -->
     <color name="buttonBackground">#FFF9C4</color>
     <color name="buttonText">#4A148C</color>
-    <color name="fabColor">#FFF9C4</color>
+    <color name="fabColor">#FFD54F</color>
     <color name="fabIconColor">#4A148C</color>
+    <color name="card_background">#4A148C</color> <!-- darker purple -->
+    <color name="card_border">#BB86FC</color>
 </resources>
