--- a/app/src/main/res/drawable/title_box.xml
+++ b/app/src/main/res/drawable/title_box.xml
@@ -1,16 +1,16 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <!-- Pale purple background -->
-    <solid android:color="#E1BEE7"/> <!-- soft pale purple -->
+    <!-- Background color -->
+    <solid android:color="@color/card_background"/>
 
     <!-- Rounded corners -->
     <corners android:radius="12dp"/>
 
-    <!-- Thin purple border -->
+    <!-- Border -->
     <stroke
         android:width="1dp"
-        android:color="#800080"/> <!-- purple -->
+        android:color="@color/card_border"/>
 
     <!-- Inner padding -->
     <padding
