--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -6,6 +6,7 @@
     android:padding="12dp"
     android:background="?android:colorBackground">
 
+    <!-- Task title -->
     <TextView
         android:id="@+id/task_title"
         android:layout_width="0dp"
@@ -15,14 +16,29 @@
         android:textColor="?android:textColorPrimary"
         android:textStyle="bold"
         android:fontFamily="@font/fredoka"
+        android:ellipsize="end"
+        android:maxLines="2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/task_checkbox" />
+
+    <!-- Due date -->
+    <TextView
+        android:id="@+id/task_due_date"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Due: 12/12/2025"
+        android:textSize="14sp"
+        android:fontFamily="@font/fredoka"
+        android:textColor="?android:textColorSecondary"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/task_title"
         app:layout_constraintEnd_toStartOf="@id/task_checkbox"
         app:layout_constraintBottom_toBottomOf="parent"
         android:ellipsize="end"
+        android:maxLines="1" />
 
-        android:maxLines="2" />
-
+    <!-- Checkbox -->
     <CheckBox
         android:id="@+id/task_checkbox"
         android:layout_width="wrap_content"
@@ -30,8 +46,8 @@
         android:buttonTint="?android:colorSecondary"
         android:text=""
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/task_title"
+        app:layout_constraintBottom_toBottomOf="@id/task_due_date" />
 
     <!-- Separator line -->
     <View
