--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,7 +2,7 @@
     <color name="screenBackground">#4A148C</color> <!-- dark purple -->
     <color name="primaryText">#FFC107</color>      <!-- yellow -->
     <color name="secondaryText">#FFD54F</color>    <!-- lighter yellow -->
-    <color name="buttonBackground">#FFF9C4</color>
+    <color name="buttonBackground">#FFD54F</color>
     <color name="buttonText">#4A148C</color>
     <color name="fabColor">#FFD54F</color>
     <color name="fabIconColor">#4A148C</color>
