--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -1,42 +1,56 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp"
-    android:background="?android:colorBackground">
+    android:background="?android:colorBackground"
+    android:padding="12dp">
 
     <!-- Task title -->
     <TextView
         android:id="@+id/task_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Task Title"
-        android:textSize="20sp"
-        android:textColor="?android:textColorPrimary"
-        android:textStyle="bold"
-        android:fontFamily="@font/fredoka"
         android:ellipsize="end"
+        android:fontFamily="@font/fredoka"
         android:maxLines="2"
+        android:text="Task Title"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@id/task_checkbox"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/task_checkbox" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- Description preview -->
+    <TextView
+        android:id="@+id/task_description_preview"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="Task description preview"
+        android:textColor="?android:textColorSecondary"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toStartOf="@id/task_checkbox"
+        app:layout_constraintStart_toStartOf="@id/task_title"
+        app:layout_constraintTop_toBottomOf="@id/task_title" />
 
     <!-- Due date -->
     <TextView
         android:id="@+id/task_due_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Due: 12/12/2025"
-        android:textSize="14sp"
-        android:fontFamily="@font/fredoka"
-        android:textColor="?android:textColorSecondary"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/task_title"
-        app:layout_constraintEnd_toStartOf="@id/task_checkbox"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:ellipsize="end"
-        android:maxLines="1" />
+        android:maxLines="1"
+        android:text="Due: 12/12/2025"
+        android:textColor="?android:textColorSecondary"
+        android:textSize="12sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/task_checkbox"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/task_description_preview" />
 
     <!-- Checkbox -->
     <CheckBox
@@ -45,17 +59,16 @@
         android:layout_height="wrap_content"
         android:buttonTint="?android:colorSecondary"
         android:text=""
+        app:layout_constraintBottom_toBottomOf="@id/task_due_date"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/task_title"
-        app:layout_constraintBottom_toBottomOf="@id/task_due_date" />
+        app:layout_constraintTop_toTopOf="@id/task_title" />
 
     <!-- Separator line -->
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="#BDBDBD"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
