--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -45,8 +45,9 @@
         android:maxLines="1"
         android:text="Due: 12/12/2025"
         android:textColor="?android:textColorSecondary"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:textStyle="normal"
+        android:layout_marginTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/task_checkbox"
         app:layout_constraintStart_toStartOf="parent"
